--- a/DataSructLab/challenge-2.ipynb
+++ b/DataSructLab/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[79, 0, 82, 36, 56, 45, 29, 65, 70, 12, 89, 30, 64, 90, 43, 7, 13, 10, 37, 15, 52, 22, 47, 92, 42, 14, 38, 68, 100, 46, 32, 58, 99, 76, 24, 78, 19, 3, 16, 69, 57, 67, 53, 66, 80, 5, 31, 93, 28, 71, 49, 77, 33, 26, 34, 17, 27, 35, 50, 40, 39, 41, 61, 60, 73, 86, 20, 74, 84, 2, 21, 88, 83, 44, 62, 54, 95, 63, 8, 11]\n"
+      "[65, 63, 76, 1, 30, 53, 8, 94, 45, 31, 2, 68, 81, 82, 46, 44, 100, 19, 87, 14, 29, 36, 22, 7, 79, 77, 11, 92, 58, 71, 24, 49, 83, 84, 52, 74, 47, 0, 34, 59, 96, 25, 33, 28, 66, 50, 21, 35, 69, 75, 78, 61, 72, 98, 88, 86, 85, 40, 56, 73, 48, 67, 57, 70, 12, 62, 6, 95, 38, 54, 3, 99, 42, 80, 23, 55, 18, 90, 89, 91]\n"
      ]
     },
     {
@@ -54,7 +54,7 @@
        "80"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 3, 5, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 19, 20, 21, 22, 24, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 49, 50, 52, 53, 54, 56, 57, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 76, 77, 78, 79, 80, 82, 83, 84, 86, 88, 89, 90, 92, 93, 95, 99, 100}\n"
+      "{0, 1, 2, 3, 6, 7, 8, 11, 12, 14, 18, 19, 21, 22, 23, 24, 25, 28, 29, 30, 31, 33, 34, 35, 36, 38, 40, 42, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 98, 99, 100}\n"
      ]
     },
     {
@@ -91,7 +91,7 @@
        "80"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[91, 60, 59, 79, 76, 9, 77, 4, 46, 12, 41, 5, 48, 4, 5, 70, 82, 26, 61, 82, 82, 98, 34, 49, 24, 36, 67, 37, 95, 92, 71, 24, 59, 16, 36, 31, 84, 18, 100, 94, 79, 57, 78, 59, 6, 67, 45, 2, 23, 57, 26, 8, 19, 95, 42, 66, 97, 42, 7, 88, 11, 7, 3, 23, 32, 83, 74, 0, 53, 69, 3, 64, 71, 97, 18, 91, 27, 63, 20, 47]\n"
+      "[67, 67, 59, 46, 10, 19, 15, 5, 91, 42, 15, 50, 90, 28, 26, 70, 2, 12, 47, 87, 19, 11, 85, 44, 28, 69, 86, 97, 57, 52, 88, 40, 5, 90, 42, 43, 18, 76, 12, 96, 23, 11, 65, 36, 91, 69, 34, 87, 23, 77, 67, 19, 27, 90, 12, 56, 55, 5, 34, 30, 71, 34, 37, 85, 2, 2, 16, 1, 53, 62, 33, 33, 74, 81, 55, 50, 16, 22, 88, 91]\n"
      ]
     },
     {
@@ -134,7 +134,7 @@
        "80"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,23 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 16, 18, 19, 20, 23, 24, 26, 27, 31, 32, 34, 36, 37, 41, 42, 45, 46, 47, 48, 49, 53, 57, 59, 60, 61, 63, 64, 66, 67, 69, 70, 71, 74, 76, 77, 78, 79, 82, 83, 84, 88, 91, 92, 94, 95, 97, 98, 100}\n"
+      "{1, 2, 5, 10, 11, 12, 15, 16, 18, 19, 22, 23, 26, 27, 28, 30, 33, 34, 36, 37, 40, 42, 43, 44, 46, 47, 50, 52, 53, 55, 56, 57, 59, 62, 65, 67, 69, 70, 71, 74, 76, 77, 81, 85, 86, 87, 88, 90, 91, 96, 97}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "59"
+       "51"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,23 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{10, 13, 14, 15, 17, 21, 22, 28, 29, 30, 33, 35, 38, 39, 40, 43, 44, 50, 52, 54, 56, 58, 62, 65, 68, 73, 80, 86, 89, 90, 93, 99}\n"
+      "{0, 3, 6, 7, 8, 14, 21, 24, 25, 29, 31, 35, 38, 45, 48, 49, 54, 58, 61, 63, 66, 68, 72, 73, 75, 78, 79, 80, 82, 83, 84, 89, 92, 94, 95, 98, 99, 100}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "32"
+       "38"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,23 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{97, 98, 4, 6, 9, 91, 48, 18, 23, 59, 94}\n"
+      "{97, 5, 37, 10, 43, 15, 16, 26, 27}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "11"
+       "9"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,23 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 3, 5, 7, 8, 11, 12, 16, 19, 20, 24, 26, 27, 31, 32, 34, 36, 37, 41, 42, 45, 46, 47, 49, 53, 57, 60, 61, 63, 64, 66, 67, 69, 70, 71, 74, 76, 77, 78, 79, 82, 83, 84, 88, 92, 95, 100}\n"
+      "{1, 2, 11, 12, 18, 19, 22, 23, 28, 30, 33, 34, 36, 40, 42, 44, 46, 47, 50, 52, 53, 55, 56, 57, 59, 62, 65, 67, 69, 70, 71, 74, 76, 77, 81, 85, 86, 87, 88, 90, 91, 96}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "48"
+       "42"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -325,7 +325,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,13 +345,33 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(set2) == len(set4) + len(set5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set1) == len(set3) + (len(set2)-len(set4))"
    ]
   },
   {
@@ -363,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 3, 5, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 19, 20, 21, 22, 24, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 49, 50, 52, 53, 54, 56, 57, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 76, 77, 78, 79, 80, 82, 83, 84, 86, 88, 89, 90, 92, 93, 95, 99, 100}\n"
+      "{0, 1, 2, 3, 6, 7, 8, 11, 12, 14, 18, 19, 21, 22, 23, 24, 25, 28, 29, 30, 31, 33, 34, 35, 36, 38, 40, 42, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 98, 99, 100}\n"
      ]
     }
    ],
@@ -414,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +443,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -472,15 +492,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 76, 77, 78, 79, 80, 82, 83, 84, 86, 88, 89, 90, 91, 92, 93, 94, 95, 97, 98, 99, 100}\n",
-      "{0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 76, 77, 78, 79, 80, 82, 83, 84, 86, 88, 89, 90, 91, 92, 93, 94, 95, 97, 98, 99, 100}\n"
+      "{0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 98, 99, 100}\n",
+      "{0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 98, 99, 100}\n"
      ]
     },
     {
@@ -489,7 +509,7 @@
        "True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +542,7 @@
        "79"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 3, 5, 7, 8, 10, 12, 13, 14, 15, 16, 17, 20, 22, 24, 26, 27, 28, 30, 32, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 50, 52, 53, 54, 56, 57, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 73, 74, 76, 77, 78, 80, 82, 83, 84, 86, 88, 90, 92, 93, 95, 100}\n"
+      "{2, 3, 6, 7, 8, 12, 14, 18, 22, 23, 24, 25, 28, 30, 33, 34, 35, 36, 38, 40, 42, 44, 45, 46, 47, 48, 50, 52, 53, 54, 55, 56, 57, 58, 62, 63, 65, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 94, 95, 96, 98, 100}\n"
      ]
     }
    ],
