--- a/DataSructLab/challenge-2.ipynb
+++ b/DataSructLab/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[65, 63, 76, 1, 30, 53, 8, 94, 45, 31, 2, 68, 81, 82, 46, 44, 100, 19, 87, 14, 29, 36, 22, 7, 79, 77, 11, 92, 58, 71, 24, 49, 83, 84, 52, 74, 47, 0, 34, 59, 96, 25, 33, 28, 66, 50, 21, 35, 69, 75, 78, 61, 72, 98, 88, 86, 85, 40, 56, 73, 48, 67, 57, 70, 12, 62, 6, 95, 38, 54, 3, 99, 42, 80, 23, 55, 18, 90, 89, 91]\n"
+      "[15, 10, 82, 69, 79, 51, 85, 96, 49, 64, 66, 95, 94, 78, 83, 65, 17, 42, 14, 57, 32, 5, 74, 3, 34, 18, 1, 93, 62, 40, 7, 89, 90, 97, 58, 22, 71, 76, 84, 29, 52, 36, 86, 35, 56, 54, 60, 21, 81, 2, 33, 75, 28, 53, 70, 23, 19, 9, 20, 63, 0, 30, 68, 25, 24, 92, 27, 26, 31, 72, 37, 77, 8, 13, 88, 50, 44, 11, 55, 46]\n"
      ]
     },
     {
@@ -54,7 +54,7 @@
        "80"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 6, 7, 8, 11, 12, 14, 18, 19, 21, 22, 23, 24, 25, 28, 29, 30, 31, 33, 34, 35, 36, 38, 40, 42, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 98, 99, 100}\n"
+      "{0, 1, 2, 3, 5, 7, 8, 9, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 40, 42, 44, 46, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 68, 69, 70, 71, 72, 74, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 86, 88, 89, 90, 92, 93, 94, 95, 96, 97}\n"
      ]
     },
     {
@@ -91,7 +91,7 @@
        "80"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[67, 67, 59, 46, 10, 19, 15, 5, 91, 42, 15, 50, 90, 28, 26, 70, 2, 12, 47, 87, 19, 11, 85, 44, 28, 69, 86, 97, 57, 52, 88, 40, 5, 90, 42, 43, 18, 76, 12, 96, 23, 11, 65, 36, 91, 69, 34, 87, 23, 77, 67, 19, 27, 90, 12, 56, 55, 5, 34, 30, 71, 34, 37, 85, 2, 2, 16, 1, 53, 62, 33, 33, 74, 81, 55, 50, 16, 22, 88, 91]\n"
+      "[26, 93, 62, 84, 70, 94, 74, 41, 67, 42, 33, 23, 89, 26, 62, 67, 89, 37, 76, 79, 41, 61, 56, 89, 55, 72, 3, 80, 18, 65, 76, 43, 84, 68, 94, 18, 45, 90, 90, 45, 57, 25, 4, 66, 13, 70, 14, 2, 54, 25, 42, 29, 42, 25, 49, 86, 30, 8, 56, 17, 82, 89, 16, 51, 98, 31, 48, 76, 57, 80, 86, 75, 87, 38, 98, 36, 84, 3, 22, 33]\n"
      ]
     },
     {
@@ -134,7 +134,7 @@
        "80"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,23 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 5, 10, 11, 12, 15, 16, 18, 19, 22, 23, 26, 27, 28, 30, 33, 34, 36, 37, 40, 42, 43, 44, 46, 47, 50, 52, 53, 55, 56, 57, 59, 62, 65, 67, 69, 70, 71, 74, 76, 77, 81, 85, 86, 87, 88, 90, 91, 96, 97}\n"
+      "{2, 3, 4, 8, 13, 14, 16, 17, 18, 22, 23, 25, 26, 29, 30, 31, 33, 36, 37, 38, 41, 42, 43, 45, 48, 49, 51, 54, 55, 56, 57, 61, 62, 65, 66, 67, 68, 70, 72, 74, 75, 76, 79, 80, 82, 84, 86, 87, 89, 90, 93, 94, 98}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "51"
+       "53"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,23 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 3, 6, 7, 8, 14, 21, 24, 25, 29, 31, 35, 38, 45, 48, 49, 54, 58, 61, 63, 66, 68, 72, 73, 75, 78, 79, 80, 82, 83, 84, 89, 92, 94, 95, 98, 99, 100}\n"
+      "{0, 1, 5, 7, 9, 10, 11, 15, 19, 20, 21, 24, 27, 28, 32, 34, 35, 40, 44, 46, 50, 52, 53, 58, 60, 63, 64, 69, 71, 77, 78, 81, 83, 85, 88, 92, 95, 96, 97}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "38"
+       "39"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,23 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{97, 5, 37, 10, 43, 15, 16, 26, 27}\n"
+      "{98, 67, 4, 38, 41, 43, 45, 16, 48, 80, 87, 61}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "9"
+       "12"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,23 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 11, 12, 18, 19, 22, 23, 28, 30, 33, 34, 36, 40, 42, 44, 46, 47, 50, 52, 53, 55, 56, 57, 59, 62, 65, 67, 69, 70, 71, 74, 76, 77, 81, 85, 86, 87, 88, 90, 91, 96}\n"
+      "{2, 3, 8, 13, 14, 17, 18, 22, 23, 25, 26, 29, 30, 31, 33, 36, 37, 42, 49, 51, 54, 55, 56, 57, 62, 65, 66, 68, 70, 72, 74, 75, 76, 79, 82, 84, 86, 89, 90, 93, 94}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "42"
+       "41"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -325,7 +325,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -409,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 6, 7, 8, 11, 12, 14, 18, 19, 21, 22, 23, 24, 25, 28, 29, 30, 31, 33, 34, 35, 36, 38, 40, 42, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 98, 99, 100}\n"
+      "{0, 1, 2, 3, 5, 7, 8, 9, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 40, 42, 44, 46, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 68, 69, 70, 71, 72, 74, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 86, 88, 89, 90, 92, 93, 94, 95, 96, 97}\n"
      ]
     }
    ],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -492,15 +492,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 98, 99, 100}\n",
-      "{0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 98, 99, 100}\n"
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 44, 45, 46, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98}\n",
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 44, 45, 46, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98}\n"
      ]
     },
     {
@@ -509,7 +509,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "79"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 3, 6, 7, 8, 12, 14, 18, 22, 23, 24, 25, 28, 30, 33, 34, 35, 36, 38, 40, 42, 44, 45, 46, 47, 48, 50, 52, 53, 54, 55, 56, 57, 58, 62, 63, 65, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 94, 95, 96, 98, 100}\n"
+      "{2, 3, 5, 7, 8, 10, 13, 14, 15, 17, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 35, 36, 37, 40, 42, 44, 46, 50, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 68, 70, 72, 74, 75, 76, 77, 78, 82, 83, 84, 85, 86, 88, 90, 92, 93, 94, 95, 96, 97}\n"
      ]
     }
    ],
@@ -582,7 +582,7 @@
     "\n",
     "for n in list_to_remove:\n",
     "    if n in set1:\n",
-    "        set1.remove(n)\n",
+    "        set1.discard(n)\n",
     "                  \n",
     "print(set1)"
    ]
