--- a/StringsLab/LAB_Notebook_Python_Strings.ipynb
+++ b/StringsLab/LAB_Notebook_Python_Strings.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "'I am strengthening my programming skills in order to become a great Data Analyst.'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,20 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['bananas', 'bread', 'brownie mix', 'broccoli']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "\n",
@@ -71,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +135,7 @@
        "'The area of the circle with radius:4.5 is:63.62'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -166,34 +155,13 @@
        "63.61725123519331"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"float\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22092/1798499439.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstring1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mradius\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"float\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "string1 + radius"
    ]
   },
   {
@@ -209,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +224,7 @@
        "'some say the world will end in fire\\nsome say in ice\\nfrom what i’ve tasted of desire\\ni hold with those who favor fire\\nbut if it had to perish twice\\ni think i know enough of hate\\nto say that for destruction ice\\nis also great\\nand would suffice'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +284,7 @@
        " 'suffice': 1}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'garden', 'my', 'smiles', 'apple', 'i', 'grew', 'beneath', 'was', 'both', 'bore', 'day', 'told', 'pole', 'waterd', 'end', 'he', 'that', 'see', 'had', 'soft', 'did', 'foe', 'sunned', 'deceitful', 'when', 'tears', 'wrath', 'fears', 'into', 'till', 'mine', 'grow', 'friend', 'morning', 'veild', 'with', 'not', 'stole', 'night', 'angry', 'shine', 'glad', 'tree', 'outstretched', 'beheld', 'bright', 'knew', 'wiles'}\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -389,230 +365,9 @@
     "\n",
     "# find the solution, words that are only in the poem (not in the blacklist)\n",
     "\n",
-    "solution = poem_split_set - intersection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'i was angry with my friend \\ni told my wrath my wrath did end\\ni was angry with my foe \\ni told it not my wrath did grow \\n\\nand i waterd it in fears\\nnight  morning with my tears \\nand i sunned it with smiles\\nand with soft deceitful wiles \\n\\nand it grew both day and night \\ntill it bore an apple bright \\nand my foe beheld it shine\\nand he knew that it was mine \\n\\nand into my garden stole \\nwhen the night had veild the pole \\nin the morning glad i see \\nmy foe outstretched beneath the tree'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "poem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'an', 'and', 'in', 'it', 'the'}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(len(intersection))\n",
-    "intersection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "53\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'an',\n",
-       " 'and',\n",
-       " 'angry',\n",
-       " 'apple',\n",
-       " 'beheld',\n",
-       " 'beneath',\n",
-       " 'bore',\n",
-       " 'both',\n",
-       " 'bright',\n",
-       " 'day',\n",
-       " 'deceitful',\n",
-       " 'did',\n",
-       " 'end',\n",
-       " 'fears',\n",
-       " 'foe',\n",
-       " 'friend',\n",
-       " 'garden',\n",
-       " 'glad',\n",
-       " 'grew',\n",
-       " 'grow',\n",
-       " 'had',\n",
-       " 'he',\n",
-       " 'i',\n",
-       " 'in',\n",
-       " 'into',\n",
-       " 'it',\n",
-       " 'knew',\n",
-       " 'mine',\n",
-       " 'morning',\n",
-       " 'my',\n",
-       " 'night',\n",
-       " 'not',\n",
-       " 'outstretched',\n",
-       " 'pole',\n",
-       " 'see',\n",
-       " 'shine',\n",
-       " 'smiles',\n",
-       " 'soft',\n",
-       " 'stole',\n",
-       " 'sunned',\n",
-       " 'tears',\n",
-       " 'that',\n",
-       " 'the',\n",
-       " 'till',\n",
-       " 'told',\n",
-       " 'tree',\n",
-       " 'veild',\n",
-       " 'was',\n",
-       " 'waterd',\n",
-       " 'when',\n",
-       " 'wiles',\n",
-       " 'with',\n",
-       " 'wrath'}"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(len(poem_split_set))\n",
-    "poem_split_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'angry',\n",
-       " 'apple',\n",
-       " 'beheld',\n",
-       " 'beneath',\n",
-       " 'bore',\n",
-       " 'both',\n",
-       " 'bright',\n",
-       " 'day',\n",
-       " 'deceitful',\n",
-       " 'did',\n",
-       " 'end',\n",
-       " 'fears',\n",
-       " 'foe',\n",
-       " 'friend',\n",
-       " 'garden',\n",
-       " 'glad',\n",
-       " 'grew',\n",
-       " 'grow',\n",
-       " 'had',\n",
-       " 'he',\n",
-       " 'i',\n",
-       " 'into',\n",
-       " 'knew',\n",
-       " 'mine',\n",
-       " 'morning',\n",
-       " 'my',\n",
-       " 'night',\n",
-       " 'not',\n",
-       " 'outstretched',\n",
-       " 'pole',\n",
-       " 'see',\n",
-       " 'shine',\n",
-       " 'smiles',\n",
-       " 'soft',\n",
-       " 'stole',\n",
-       " 'sunned',\n",
-       " 'tears',\n",
-       " 'that',\n",
-       " 'till',\n",
-       " 'told',\n",
-       " 'tree',\n",
-       " 'veild',\n",
-       " 'was',\n",
-       " 'waterd',\n",
-       " 'when',\n",
-       " 'wiles',\n",
-       " 'with',\n",
-       " 'wrath'}"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(len(solution))\n",
-    "solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a', 'an', 'and', 'as', 'in', 'it', 'the'}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "blacklist_set"
+    "solution = poem_split_set - intersection\n",
+    "\n",
+    "print(solution)\n"
    ]
   },
   {
