--- a/PreworkLab/Lab_rock-paper-scissors.ipynb
+++ b/PreworkLab/Lab_rock-paper-scissors.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,18 @@
       "The gesture of the CPU is: lizard\n",
       "The gesture of the Player is: lizard\n",
       "The round is a tie.\n",
-      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 0\n"
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 0\n",
+      "Please choose your move:spock\n",
+      "The gesture of the CPU is: lizard\n",
+      "The gesture of the Player is: spock\n",
+      "The CPU is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 1\n",
+      "Please choose your move:lizard\n",
+      "The gesture of the CPU is: scissors\n",
+      "The gesture of the Player is: lizard\n",
+      "The CPU is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 2\n",
+      "The CPU won the game! Better Luck Next Time!\n"
      ]
     }
    ],
