--- a/PreworkLab/Lab_rock-paper-scissors.ipynb
+++ b/PreworkLab/Lab_rock-paper-scissors.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,19 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gestures = [\"rock\", \"paper\", \"scissors\"]"
+    "gestures_3moves = [\"rock\", \"paper\", \"scissors\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,33 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gestures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'rock'"
+       "'paper'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cpu_move function test\n",
+    "# cpu_move() function test\n",
     "\n",
-    "cpu_move(gestures)"
+    "cpu_move(gestures_3moves)"
    ]
   },
   {
@@ -190,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +193,9 @@
     "    while move not in gestures:\n",
     "        \n",
     "        if Flag == True:\n",
-    "            print(\"Sorry that move is not legal in Rock-Paper-Scissors. Try one of the legal options.\")\n",
+    "            print(\"Sorry that move is not legal in this game. Try one of the legal options.\")\n",
     "        \n",
-    "        move = input(\"Please choose your move:\").lower()\n",
+    "        move = input(\"Please choose your move: \").lower()\n",
     "        Flag = True\n",
     "        \n",
     "    return move\n",
@@ -220,31 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please choose your move:lizard\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'lizard'"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# player_move function test\n",
+    "# player_move() function test\n",
     "\n",
-    "player_move(gestures)"
+    "# player_move(gestures_3moves)"
    ]
   },
   {
@@ -257,64 +223,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def winner(cpu_gesture, player_gesture):\n",
+    "# def winner(cpu_gesture, player_gesture):\n",
     "    \n",
-    "    \"\"\"\n",
-    "    Inputs: player and cpu gestures. Type = strings\n",
-    "    Output: winner of the round (2 = Player / 1 = CPU / 0 = Tie). Type = int\n",
+    "#     \"\"\"\n",
+    "#     Inputs: player and cpu gestures. Type = strings\n",
+    "#     Output: winner of the round (2 = Player / 1 = CPU / 0 = Tie). Type = int\n",
     "    \n",
-    "    \"\"\"\n",
+    "#     \"\"\"\n",
     "    \n",
-    "    if player_gesture == \"paper\":\n",
+    "#     if player_gesture == \"paper\":\n",
     "        \n",
-    "        if cpu_gesture == \"rock\":\n",
+    "#         if cpu_gesture == \"rock\":\n",
     "            \n",
-    "            return 2\n",
+    "#             return 2\n",
     "        \n",
-    "        elif cpu_gesture == \"scissors\":\n",
+    "#         elif cpu_gesture == \"scissors\":\n",
     "            \n",
-    "            return 1\n",
+    "#             return 1\n",
     "        \n",
-    "        else:\n",
+    "#         else:\n",
     "            \n",
-    "            return 0\n",
+    "#             return 0\n",
     "        \n",
-    "    if player_gesture == \"rock\":\n",
+    "#     if player_gesture == \"rock\":\n",
     "        \n",
-    "        if cpu_gesture == \"scissors\":\n",
+    "#         if cpu_gesture == \"scissors\":\n",
     "            \n",
-    "            return 2\n",
+    "#             return 2\n",
     "        \n",
-    "        elif cpu_gesture == \"paper\":\n",
+    "#         elif cpu_gesture == \"paper\":\n",
     "            \n",
-    "            return 1\n",
+    "#             return 1\n",
     "        \n",
-    "        else:\n",
+    "#         else:\n",
     "            \n",
-    "            return 0\n",
+    "#             return 0\n",
     "        \n",
-    "    if player_gesture == \"scissors\":\n",
+    "#     if player_gesture == \"scissors\":\n",
     "        \n",
-    "        if cpu_gesture == \"paper\":\n",
+    "#         if cpu_gesture == \"paper\":\n",
     "            \n",
-    "            return 2\n",
+    "#             return 2\n",
     "        \n",
-    "        elif cpu_gesture == \"rock\":\n",
+    "#         elif cpu_gesture == \"rock\":\n",
     "            \n",
-    "            return 1\n",
+    "#             return 1\n",
     "        \n",
-    "        else:\n",
+    "#         else:\n",
     "            \n",
-    "            return 0"
+    "#             return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +295,10 @@
     "\n",
     "def winner(cpu_gesture, player_gesture, rules):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
     "    if cpu_gesture == player_gesture:\n",
     "        \n",
     "        return 0    \n",
@@ -340,21 +310,29 @@
     "    elif rules[player_gesture][cpu_gesture] == \"Loses\":\n",
     "        \n",
     "        return 1\n",
-    "        \n",
-    "\n",
-    "        \n",
     "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# winner function test\n",
     "\n",
-    "winner(\"paper\", \"rock\", rules)"
+    "winner(\"paper\", \"rock\", rules_3moves)"
    ]
   },
   {
@@ -367,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,9 +382,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The gesture of the CPU is: paper\n",
+      "The gesture of the Player is: rock\n",
+      "The round is a tie.\n",
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "printer(\"paper\", \"rock\", 0, 0, 0)"
    ]
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def play_a_game(rules):\n",
+    "def play_a_game(rules, gestures):\n",
     "    \n",
     "    \"\"\"\n",
     "    \"\"\"\n",
@@ -479,13 +478,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please insert the number of rounds you wanna play: 3\n",
+      "Please choose your move: rock\n",
+      "The gesture of the CPU is: paper\n",
+      "The gesture of the Player is: rock\n",
+      "The CPU is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 1\n",
+      "Please choose your move: paper\n",
+      "The gesture of the CPU is: rock\n",
+      "The gesture of the Player is: paper\n",
+      "The Player is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 1\n",
+      "Please choose your move: paper\n",
+      "The gesture of the CPU is: paper\n",
+      "The gesture of the Player is: paper\n",
+      "The round is a tie.\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 1\n",
+      "Please choose your move: \n",
+      "Sorry that move is not legal in this game. Try one of the legal options.\n",
+      "Please choose your move: paper\n",
+      "The gesture of the CPU is: scissors\n",
+      "The gesture of the Player is: paper\n",
+      "The CPU is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 2\n",
+      "The CPU won the game! Better Luck Next Time!\n"
+     ]
+    }
+   ],
    "source": [
     "# play_a_game function test\n",
     "\n",
-    "play_a_game(rules)"
+    "play_a_game(rules_3moves, gestures_3moves)"
    ]
   },
   {
@@ -498,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,12 +565,12 @@
     "    \"lizard\":{\"rock\":\"Loses\", \"paper\":\"Wins\", \"scissors\":\"Loses\", \"spock\":\"Wins\"},\n",
     "        }\n",
     "\n",
-    "gestures = [\"rock\", \"paper\", \"scissors\", \"lizard\", \"spock\"]"
+    "gestures_5moves = [\"rock\", \"paper\", \"scissors\", \"lizard\", \"spock\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -548,27 +578,37 @@
      "output_type": "stream",
      "text": [
       "Please insert the number of rounds you wanna play: 3\n",
-      "Please choose your move:lizard\n",
+      "Please choose your move: lizard\n",
       "The gesture of the CPU is: lizard\n",
       "The gesture of the Player is: lizard\n",
       "The round is a tie.\n",
       "The overall result of the current game is: Player Wins = 0 / CPU Wins = 0\n",
-      "Please choose your move:spock\n",
+      "Please choose your move: lizard\n",
+      "The gesture of the CPU is: lizard\n",
+      "The gesture of the Player is: lizard\n",
+      "The round is a tie.\n",
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 0\n",
+      "Please choose your move: spock\n",
+      "The gesture of the CPU is: scissors\n",
+      "The gesture of the Player is: spock\n",
+      "The Player is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 0\n",
+      "Please choose your move: spock\n",
       "The gesture of the CPU is: lizard\n",
       "The gesture of the Player is: spock\n",
       "The CPU is the winner of this round.\n",
-      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 1\n",
-      "Please choose your move:lizard\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 1\n",
+      "Please choose your move: spock\n",
       "The gesture of the CPU is: scissors\n",
-      "The gesture of the Player is: lizard\n",
-      "The CPU is the winner of this round.\n",
-      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 2\n",
-      "The CPU won the game! Better Luck Next Time!\n"
+      "The gesture of the Player is: spock\n",
+      "The Player is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 2 / CPU Wins = 1\n",
+      "The Player won the game! Well Done!\n"
      ]
     }
    ],
    "source": [
-    "play_a_game(rules_5moves)"
+    "play_a_game(rules_5moves, gestures_5moves)"
    ]
   },
   {
@@ -581,7 +621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
