--- a/Activities/Morning Sunshine_Game.ipynb
+++ b/Activities/Morning Sunshine_Game.ipynb
@@ -41,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your house, containing everything you own, catches fire. After saving your loved ones and pets, you have time to safely make a final dash to save any one item. What would it be? Why?'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#PLEASE FIND SOME OF THE QUESTIONS BELOW\n",
     "\"Given the choice of anyone in the world, whom would you want as a dinner guest?\",\n",
@@ -65,23 +76,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#PLEASE PUT YOUR CODE HERE\n",
+    "questions = [\"Given the choice of anyone in the world, whom would you want as a dinner guest?\",\n",
+    "\"Would you like to be famous? In what way?\",\n",
+    "\"Before making a telephone call, do you ever rehearse what you are going to say?\",\n",
+    "\"What would constitute a perfect day for you?\",\n",
+    "\"When did you last sing to yourself? To someone else?\",\n",
+    "\"If you were able to live to the age of 90 and retain either the mind or body of a 30-year-old for the last 60 years of your life, which would you want?\",\n",
+    "\"Do you have a secret hunch about how you will die?\",\n",
+    "\"For what in your life do you feel most grateful?\",\n",
+    "\"If you could wake up tomorrow having gained any one quality or ability, what would it be?\",\n",
+    "\"If a crystal ball could tell you the truth about yourself, your life, the future, or anything else, what would you want to know?\",\n",
+    "\"What is the greatest accomplishment of your life?\"\n",
+    "\"What does friendship mean to you?\",\n",
+    "\"Share with your Ironhack fellow student an embarrassing moment in your life.\",\n",
+    "\"What, if anything, is too serious to be joked about?\",\n",
+    "\"Your house, containing everything you own, catches fire. After saving your loved ones and pets, you have time to safely make a final dash to save any one item. What would it be? Why?\"]\n",
     "\n",
-    "\n",
+    "participants = [\"Kike,\", \"Nelson,\", \"Rand,\"]\n",
     "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Would you like to be famous? In what way?'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "questions[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_question(questions, participants):\n",
+    "\n",
+    "    Flag = \"\"\n",
+    "\n",
+    "    while Flag != \"stop\":\n",
+    "\n",
+    "        person = np.random.choice(participants)\n",
+    "        question = np.random.choice(questions, replace=False)\n",
+    "\n",
+    "        input(f'{person}, {question}')\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_question(questions, participants):\n",
+    "\n",
+    "    person = np.random.choice(participants)\n",
+    "    question = np.random.choice(questions, replace=False)\n",
+    "\n",
+    "    print(person, question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rand, What is the greatest accomplishment of your life?What does friendship mean to you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "ask_question(questions, participants)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "350fa199ac5972690c7e339cc739f563045f32da9cdb6c3e3b5da606ff6ebbd1"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.0 64-bit ('DA_Environment': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -94,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
