--- a/PandasGroupbyLab/Lab_Pandas_Grouping_Data_Cleaning_Vehicles.ipynb
+++ b/PandasGroupbyLab/Lab_Pandas_Grouping_Data_Cleaning_Vehicles.ipynb
@@ -3292,7 +3292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3398,7 +3398,7 @@
        "[124 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3406,9 +3406,8 @@
    "source": [
     "\n",
     "(cars\n",
-    ".groupby(\"Brand\")[\"CO2_Emission_Grams/Km\"]\n",
+    ".groupby(\"Brand\", as_index=False)[\"CO2_Emission_Grams/Km\"]\n",
     ".mean()\n",
-    ".reset_index()\n",
     ".rename({\"CO2_Emission_Grams/Km\":\"average_CO2_Emission_Grams/Km\"}, axis=1)\n",
     ")"
    ]
@@ -3422,7 +3421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3464,33 +3463,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>Brand</th>\n",
        "      <th>average_CO2_Emission_Grams/Km</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
+       "      <th>0</th>\n",
+       "      <td>35</td>\n",
        "      <td>Fisker</td>\n",
        "      <td>105.011992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
+       "      <th>1</th>\n",
+       "      <td>123</td>\n",
        "      <td>smart</td>\n",
        "      <td>153.498052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
+       "      <th>2</th>\n",
+       "      <td>34</td>\n",
        "      <td>Fiat</td>\n",
        "      <td>189.311494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>3</th>\n",
+       "      <td>25</td>\n",
        "      <td>Daihatsu</td>\n",
        "      <td>192.742404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
+       "      <th>4</th>\n",
+       "      <td>65</td>\n",
        "      <td>MINI</td>\n",
        "      <td>194.935105</td>\n",
        "    </tr>\n",
@@ -3498,66 +3503,72 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <th>119</th>\n",
+       "      <td>56</td>\n",
        "      <td>Laforza Automobile Inc</td>\n",
        "      <td>502.012683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>120</th>\n",
+       "      <td>14</td>\n",
        "      <td>Bugatti</td>\n",
        "      <td>542.497235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
+       "      <th>121</th>\n",
+       "      <td>109</td>\n",
        "      <td>Superior Coaches Div E.p. Dutton</td>\n",
        "      <td>552.213951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
+       "      <th>122</th>\n",
+       "      <td>98</td>\n",
        "      <td>S and S Coach Company  E.p. Dutton</td>\n",
        "      <td>552.213951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
+       "      <th>123</th>\n",
+       "      <td>116</td>\n",
        "      <td>Vector</td>\n",
        "      <td>651.919248</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>124 rows × 2 columns</p>\n",
+       "<p>124 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  Brand  average_CO2_Emission_Grams/Km\n",
-       "35                               Fisker                     105.011992\n",
-       "123                               smart                     153.498052\n",
-       "34                                 Fiat                     189.311494\n",
-       "25                             Daihatsu                     192.742404\n",
-       "65                                 MINI                     194.935105\n",
-       "..                                  ...                            ...\n",
-       "56               Laforza Automobile Inc                     502.012683\n",
-       "14                              Bugatti                     542.497235\n",
-       "109    Superior Coaches Div E.p. Dutton                     552.213951\n",
-       "98   S and S Coach Company  E.p. Dutton                     552.213951\n",
-       "116                              Vector                     651.919248\n",
+       "     index                               Brand  average_CO2_Emission_Grams/Km\n",
+       "0       35                              Fisker                     105.011992\n",
+       "1      123                               smart                     153.498052\n",
+       "2       34                                Fiat                     189.311494\n",
+       "3       25                            Daihatsu                     192.742404\n",
+       "4       65                                MINI                     194.935105\n",
+       "..     ...                                 ...                            ...\n",
+       "119     56              Laforza Automobile Inc                     502.012683\n",
+       "120     14                             Bugatti                     542.497235\n",
+       "121    109    Superior Coaches Div E.p. Dutton                     552.213951\n",
+       "122     98  S and S Coach Company  E.p. Dutton                     552.213951\n",
+       "123    116                              Vector                     651.919248\n",
        "\n",
-       "[124 rows x 2 columns]"
+       "[124 rows x 3 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(cars\n",
-    ".groupby(\"Brand\")[\"CO2_Emission_Grams/Km\"]\n",
+    ".groupby(\"Brand\", as_index=False)[\"CO2_Emission_Grams/Km\"]\n",
     ".mean()\n",
-    ".reset_index()\n",
     ".rename({\"CO2_Emission_Grams/Km\":\"average_CO2_Emission_Grams/Km\"}, axis=1)\n",
     ".sort_values(\"average_CO2_Emission_Grams/Km\")\n",
+    ".reset_index()\n",
     ")"
    ]
   },
@@ -3617,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3627,7 +3638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "metadata": {
     "executionInfo": {
      "elapsed": 229,
@@ -3649,7 +3660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3815,7 +3826,7 @@
        "4    80s  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3826,7 +3837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3950,7 +3961,7 @@
        "[35952 rows x 2 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3961,7 +3972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4085,7 +4096,7 @@
        "[35952 rows x 2 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4096,7 +4107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4397,7 +4408,7 @@
        "[1068 rows x 15 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4408,7 +4419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 61,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4544,7 +4555,7 @@
        "[35952 rows x 3 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4568,7 +4579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4598,7 +4609,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4634,7 +4645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -4695,17 +4706,16 @@
        "3    10s                     264.328857"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(cars\n",
-    ".groupby(\"Decade\")\n",
+    ".groupby(\"Decade\", as_index=False)\n",
     "[\"CO2_Emission_Grams/Km\"]\n",
     ".mean()\n",
-    ".reset_index()\n",
     ".rename({\"CO2_Emission_Grams/Km\":\"average_CO2_Emission_Grams/Km\"}, axis=1)\n",
     ")"
    ]
@@ -4721,7 +4731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 64,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4760,7 +4770,7 @@
        "Name: average_CO2_Emission_Grams/Km, Length: 496, dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4788,7 +4798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4897,7 +4907,7 @@
        "Part-time 4-Wheel Drive             8.115385       6.215696"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4919,7 +4929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 66,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4949,7 +4959,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4960,7 +4970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 67,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5029,7 +5039,7 @@
        "Automatic       7.278292"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5056,7 +5066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5081,7 +5091,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ehern\\AppData\\Local\\Temp/ipykernel_14088/1889603364.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "C:\\Users\\ehern\\AppData\\Local\\Temp/ipykernel_19680/1889603364.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  (cars\n"
      ]
     },
@@ -5134,7 +5144,7 @@
        "1     Manual           7.968348        11662"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5151,7 +5161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -5323,7 +5333,7 @@
        "4    80s        80s  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5341,7 +5351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -5390,18 +5400,17 @@
        "1     Manual           2.550857"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(cars\n",
-    ".groupby(\"Trans\")\n",
+    ".groupby(\"Trans\", as_index=False)\n",
     "[\"City_Km/Liter\"]\n",
-    ".agg([\"min\"])\n",
-    ".reset_index()\n",
-    ".rename(columns = {\"min\":\"min_City_Km/Liter\"})\n",
+    ".agg(\"min\")\n",
+    ".rename(columns = {\"City_Km/Liter\":\"min_City_Km/Liter\"})\n",
     ")"
    ]
   }
